Add use of URI class for validation, and escape the necessary characters.